# esp32_aec_test

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
libs/seekaudio_aec/include/: seekaudio_aec.h
main/: CMakeLists.txt  Kconfig.projbuild  aectest.cpp  idf_component.yml  seekaudio_afe_aec.cpp  seekaudio_afe_aec.h  seekaudio_defines.h
